app03-studentGrades/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\cleme\Desktop\repos\BNUPC\app03-studentGrades
-d
C:\Users\cleme\Desktop\repos\BNUPC\app03-studentGrades\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\cleme\Desktop\repos\BNUPC\app03-studentGrades\course.java
<---- end of javadoc command ---->
Loading source file C:\Users\cleme\Desktop\repos\BNUPC\app03-studentGrades\course.java...
C:\Users\cleme\Desktop\repos\BNUPC\app03-studentGrades\course.java:3: error: class, interface, or enum expected
@author Alex Clements
        ^
C:\Users\cleme\Desktop\repos\BNUPC\app03-studentGrades\course.java:4: error: class, interface, or enum expected
@version 27/10/2020
         ^
2 errors
